--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -443,7 +443,7 @@
   }
 }
 
-@media (max-width:425px){
+@media (max-width:426px){
   .wind{
     padding-left: 100px;
   }
@@ -452,6 +452,12 @@
   }
   .globe-wrapper{
     display: none;
+  }
+  .mobile-up{
+    display: none;
+  }
+  .mm{
+    padding-top: 5px;
   }
 }
 
@@ -466,6 +472,9 @@
     display: none;
   }
   .globe-wrapper{
+    display: none;
+  }
+  .mobile-up{
     display: none;
   }
 }
